# Galach

./: CMakeLists.txt  README.md  build.sh
src/: interpreter.cpp  lexer.cpp  main.cpp
src/include/: interpreter.cpp  interpreter.h  lexer.cpp  lexer.h
tests/: test1.g  test2.g  test4.g  test5.g  test6.g  test7.g  test8.g
